<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AutoNotes</string>
    <string name="autocapture_on">AutoNotes - ON</string>
    <string name="autocapture_off">AutoNotes - OFF</string>
    <string name="description">Set certain keywords, this app will automatically make text notes of relevant information that it can gather while you are using your device!</string>
    <string name="sample_date">2011/11/12</string>
    <string name="sample_time">12:21</string>
    <string name="sample_brief">Android programming intro …</string>
    <string name="make_changes">Make some changes before sharing if you wish. However the changes will NOT be saved.</string>
    <string name="share">Share</string>
    <string name="copy">Copy to Clipboard</string>
    <string name="notes">Notes</string>
    <string name="set_keywords">Set Keywords/Regex</string>
    <string name="notification_text">AutoNotes - ON</string>
    <string name="manually_disable_accessibility">Disable this app in Accessibility Settings please</string>
    <string name="manually_enable_accessibility">Make sure to enable this app in Accessibility Settings</string>
    <string name="settings">Settings</string>
    <string name="nothing">Nothing here yet.</string>
    <string name="new_keyword">New Keyword/Regex</string>
    <string name="remove_keyword">Remove</string>
    <string name="sample_keyword">Sample Keyword</string>
    <string name="del">DEL</string>
    <string name="keyword_already_exists">The keyword or regex already exists</string>
    <string name="all_notes">All Notes</string>
    <string name="keywords_examples">Example keywords:\n
        agenda\n
        appointment\n
        remind\n\n
        Example regex:\n
        /.*at \\d.*/ (\"..at 6..\")\n
        /.*\\d{4,12}.*/ (\"..pin 1234..\")</string>
    <string name="what_are_keywords">How do these work?</string>
    <string name="what_actually_are_keywords">AutoNotes captures only the information on your screen which contain these keywords. 
        Example keywords are: meeting, agenda, reminder. 
        Add keyword one at a time. Keywords are case-INsensitive.
        Java regular expressions (surrounded by //) are also accepted. \n
        For example: /.*at \\d.*/ matches \".. at 6 ..\"</string>
    <string name="keyword_created">Saved</string>
    <string name="regex_compiled">Regex compiled</string>
    <string name="regex_failure">Regex compilation failure!</string>
    <string name="filter_clipboard">Use filter on clipboard content?</string>
    <string name="filter_message">Use filter on typed messages?</string>
    <string name="min_words">Min. note length in words:</string>
    <string name="filter_clipboard_help">Whether or not to always save notes for Clipboard contents (bypass keywords filter and note length filter).</string>
    <string name="filter_message_help">Whether always save notes for messages that you type (bypass keywords filter and note length filter).</string>
    <string name="min_words_help">Minimum number of words which a text must contain, in order to be saved as note.</string>
    <string name="question_mark">\?</string>
    <string name="sure_to_delete">Are you sure to delete all notes on the day</string>
    <string name="copied_to_clipboard">Text copied to Clipboard</string>
    <string name="contact">Contact the author</string>
    <string name="contact_author">Your feedback is very valuable! Please send feedback to the author, Twitter@hzguo or mailto:guoHouzuo@Gmail.com. Thank you!</string>
    <string name="notify_match">Notify me when there is a match</string>
    <string name="export">Export to SD</string>
    <string name="search">Search notes</string>
    <string name="search_result">Search for</string>
    <string name="go">Go</string>
    <string name="no_result">No result.</string>
    <string name="search_hint">Regex surrounded by //\nOr case-insensitive keyword</string>
    <string name="search_complete">Search completed</string>
    <string name="sd_error">Error: Failed to export notes to SD card</string>
    <string name="exported">Successfully exported to </string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>