<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/del" />

    <Button
        android:id="@+id/exportButton"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/export" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:text="@string/sample_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>