<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/commandLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/shareButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share" />

        <Button
            android:id="@+id/copyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copy" />
    </LinearLayout>

    <TextView
        android:id="@+id/makeChangesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_changes" />

    <EditText
        android:id="@+id/contentEditText"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:scrollbars="vertical" >

        <requestFocus />
    </EditText>

</LinearLayout>