<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/controlLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <EditText
            android:id="@+id/keywordEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:hint="@string/search_hint"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:text="@string/go" />
    </LinearLayout>

    <ListView
        android:id="@+id/resultListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

    <TextView
        android:id="@+id/noResultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/no_result"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>